# drone_auto_bag_record

./: CMakeLists.txt  README.md  package.xml
scripts/: python_terminal_control.py  record.sh
