<?xml version="1.0"?>
<package>
    <name>drone_auto_bag_record</name>
    <version>0.0.0</version>

    <description>drone_auto_bag_record</description>
    <maintainer email="eungchang_mason@kaist.ac.kr">Eungchang Mason Lee</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>mavros_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>mavros_msgs</run_depend>

    <export>
    </export>
</package>